미세먼지 init 수정, 인터페이스 상속